--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ dotnet: 2.0.0
 dist: trusty
 
 install:
-#- docker build -t jackil/docker-gc-test -f Dockerfile.test .
-- docker build -t jackil/docker-gc-helm-chart-validate -f ./helm-chart/Dockerfile .
+- docker build -t docker-gc-test -f Dockerfile.test .
+#- docker build -t docker-gc-helm-chart-validate -f ./helm-chart/Dockerfile .
 
 script:
 - docker build -t jackil/docker-gc -f Dockerfile .
