--- a/helm-chart/docker-gc/values.yaml
+++ b/helm-chart/docker-gc/values.yaml
@@ -11,14 +11,16 @@ statsd:
   #host: localhost
   #port: 8125
 config:
-  executionIntervalInMinutes: 60
   dockerEndpoint: unix:///var/run/docker.sock
+  executionIntervalInMinutes: 60
+  dockerClientTimeoutInSeconds: 180
+  imageDeletionOrder: ByImageLastTouchDate
+  #imageDeletionOrder: ByImageCreationDate
   strategy: ByDate
   daysBeforeDeletion: 30
   #strategy: ByDiskSpace
   #sizeLimitInGigabyte:
   containerStateBlacklist: dead,exited
-  waitForContainersInBlacklistStateForDays: 7
 resources:
   limits:
     cpu: 100m
