--- a/helm-chart/jackil-docker-gc/templates/daemonset.yaml
+++ b/helm-chart/jackil-docker-gc/templates/daemonset.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
-  name: {{ template "fullname" . }}
+  name: {{ template "docker-gc.fullname" . }}
   namespace: default
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
