hard-code container name

--- a/helm-chart/jackil-docker-gc/templates/daemonset.yaml
+++ b/helm-chart/jackil-docker-gc/templates/daemonset.yaml
@@ -11,7 +11,7 @@ spec:
   template:
     spec:
       containers:
-      - name: {{ .Chart.Name }}
+      - name: docker-gc
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         env:
