add spec metadata labels

--- a/helm-chart/jackil-docker-gc/templates/daemonset.yaml
+++ b/helm-chart/jackil-docker-gc/templates/daemonset.yaml
@@ -9,6 +9,10 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   template:
+    metadata:
+      labels:
+        app: {{ template "docker-gc.name" . }}
+        release: {{ .Release.Name }}
     spec:
       containers:
       - name: docker-gc
