Revert "hard-code container name"
This reverts commit e5c5464cb6db4b5675ef6bf928920054fda64ebe.

--- a/helm-chart/jackil-docker-gc/templates/daemonset.yaml
+++ b/helm-chart/jackil-docker-gc/templates/daemonset.yaml
@@ -15,7 +15,7 @@ spec:
         release: {{ .Release.Name }}
     spec:
       containers:
-      - name: docker-gc
+      - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         resources:
