Use azure container registry for container

--- a/helm-chart/jackil-docker-gc/values.yaml
+++ b/helm-chart/jackil-docker-gc/values.yaml
@@ -1,6 +1,6 @@
 # Default values for docker-gc.
 image:
-  repository: jackil/docker-gc
+  repository: airsharedcontainers.azurecr.io/docker-gc
   tag: latest
   pullPolicy: Always
 docker:
