Change pull policy to IfNotPresent

--- a/helm-chart/jackil-docker-gc/values.yaml
+++ b/helm-chart/jackil-docker-gc/values.yaml
@@ -2,7 +2,7 @@
 image:
   repository: airsharedcontainers.azurecr.io/docker-gc
   tag: latest
-  pullPolicy: Always
+  pullPolicy: IfNotPresent
 docker:
   socketPath: /var/run/docker.sock
   volumeName: docker-volume
