--- a/helm-chart/jackil-docker-gc/templates/daemonset.yaml
+++ b/helm-chart/jackil-docker-gc/templates/daemonset.yaml
@@ -56,3 +56,9 @@ spec:
        - name: {{ .Values.docker.volumeName }}
          hostPath:
           path: {{ .Values.docker.socketPath }}
+      {{- if .Values.image.pullSecrets }}
+      imagePullSecrets:
+        {{- range .Values.image.pullSecrets }}
+        - name: {{ . }}
+        {{- end }}
+      {{- end }}
