--- a/helm-chart/jackil-docker-gc/values.yaml
+++ b/helm-chart/jackil-docker-gc/values.yaml
@@ -5,6 +5,9 @@ image:
   #repository: airsharedcontainers.azurecr.io/docker-gc
   tag: latest
   pullPolicy: IfNotPresent
+  # optional pull secrets
+  # pullSecrets: 
+  # - "airsharedcontainers"
 docker:
   socketPath: /var/run/docker.sock
   volumeName: docker-volume
