--- a/src/docker-cache-cleaner/values.yaml
+++ b/src/docker-cache-cleaner/values.yaml
@@ -1,8 +1,9 @@
 # Default values for docker-gc.
 image:
-  repository: jackil/docker-gc
+  # repository: jackil/docker-gc
   #Repository should be moved to AIR Shared Container Registry
   #repository: airsharedcontainers.azurecr.io/docker-gc
+  repository: viennadroptest.azurecr.io/docker-cache-cleaner
   tag: latest
   pullPolicy: IfNotPresent
   # optional pull secrets
