--- a/deploy/specs/build.yaml
+++ b/deploy/specs/build.yaml
@@ -1,8 +1,9 @@
 apps:
-  # msftkube will fail if there's no app
-  dummy-app:
-    deploymentGroups:
-      - "default"
   docker-cache-cleaner:
     deploymentGroups:
       - "default"
+    build:
+      docker:
+        builds:
+          docker-cache-cleaner:
+            dir: "{{paths.src}}"
