--- a/src/docker-cache-cleaner/Chart.yaml
+++ b/src/docker-cache-cleaner/Chart.yaml
@@ -2,7 +2,7 @@ name: docker-cache-cleaner
 description: A Docker Image Garbage Collector Helm chart for Kubernetes
 home: https://github.com/johndoe0920/docker-gc
 version: 1.0.0
-appVersion: latest
+appVersion: 1.0.0
 sources:
   - https://github.com/johndoe0920/docker-gc
 maintainers:
