--- a/src/docker-cache-cleaner/templates/docker-cache-cleaner.yaml
+++ b/src/docker-cache-cleaner/templates/docker-cache-cleaner.yaml
@@ -5,8 +5,6 @@ metadata:
   labels:
     app: {{ template "docker-gc.name" . }}
     chart: {{ template "docker-gc.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
 spec:
   selector:
     matchLabels:
@@ -15,11 +13,10 @@ spec:
     metadata:
       labels:
         app: docker-cache-cleaner
-        release: {{ .Release.Name }}
     spec:
       containers:
       - name: {{ template "docker-gc.name" . }}
-        image: "{{ .Values.image.repository }}:{{app.drop.images.docker-cache-cleaner.tag}}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
@@ -64,12 +61,6 @@ spec:
        - name: {{ .Values.docker.volumeName }}
          hostPath:
           path: {{ .Values.docker.socketPath }}
-      {{- if .Values.image.pullSecrets }}
-      imagePullSecrets:
-        {{- range .Values.image.pullSecrets }}
-        - name: {{ . }}
-        {{- end }}
-      {{- end }}
   updateStrategy:
     rollingUpdate:
       maxUnavailable: 100%
