--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,7 +38,7 @@ steps:
     addSpnToEnvironment: true
     scriptLocation: 'scriptPath'
     scriptPath: '$(system.defaultWorkingDirectory)/scripts/task.sh'
-    args: --verbose full_drop -e mir-release-int-westus2
+    args: --verbose full_drop
     workingDirectory: '$(system.defaultWorkingDirectory)'
 
 - task: PublishPipelineArtifact@0
