Adding update and upgrade

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -10,7 +10,7 @@ FROM mcr.microsoft.com/dotnet/runtime:5.0
 WORKDIR /docker-gc
 COPY --from=build-env /docker-gc/out ./
 
-RUN apt update && apt upgrade -y
+RUN apt update && apt upgrade -y && apt autoclean
 
 ENV DOCKERGC_DOCKER_ENDPOINT unix:///var/run/docker.sock
 ENV DOCKERGC_EXECUTION_INTERVAL_IN_MINUTES 720
