Adding node selector for only linux nodes

--- a/deploy/templates/k8s/docker-cache-cleaner.yaml
+++ b/deploy/templates/k8s/docker-cache-cleaner.yaml
@@ -19,6 +19,8 @@ spec:
       - name: "{{app.k8s.parameters.fullname}}"
         image: "{{publish.docker.registry.hostname}}/{{app.drop.images.docker-cache-cleaner.name}}:{{app.drop.images.docker-cache-cleaner.tag}}"
         imagePullPolicy: "{{app.k8s.parameters.imagePullPolicy}}"
+        nodeSelector:
+          beta.kubernetes.io/os: linux
         resources:
           limits:
             cpu: "{{app.resources.limits.cpu}}"
