--- a/deploy/templates/helm/docker-cache-cleaner-values.yaml
+++ b/deploy/templates/helm/docker-cache-cleaner-values.yaml
@@ -21,6 +21,8 @@ config:
   strategy: ByDate
   daysBeforeDeletion: 1
   containerStateBlacklist: dead,exited
+nodeSelector:
+  beta.kubernetes.io/os: linux
 resources:
   limits:
     cpu: 100m
