--- a/src/docker-cache-cleaner/templates/docker-cache-cleaner.yaml
+++ b/src/docker-cache-cleaner/templates/docker-cache-cleaner.yaml
@@ -18,6 +18,8 @@ spec:
       - name: {{ template "docker-gc.name" . }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+        nodeSelector:
+{{ toYaml .Values.nodeSelector | indent 10 }}
         resources:
 {{ toYaml .Values.resources | indent 10 }}
         env:
